adicionei o segundo paragrafo

--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam non debitis aliquam minus placeat laudantium repudiandae, suscipit nostrum earum! Similique minima eum odit ipsam, et dolor corporis dolorum voluptatibus ducimus!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus optio rerum aperiam eos fugiat quas facilis atque perspiciatis totam velit quidem veniam consequuntur adipisci vero molestias dicta, voluptatum labore mollitia.</p>
 </body>
 </html>
